// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    <span>
      1
    </span>
     
    expense
     totalling 
    <span>
      $2.35
    </span>
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    <span>
      23
    </span>
     
    expenses
     totalling 
    <span>
      $235,123,409.87
    </span>
  </p>
</div>
`;
